# llm-security-lab

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: security-tests.yml
attacks/: README.md
attacks/excessive-agency/: test_excessive_agency.py
attacks/improper-output-handling/: payloads.yaml  test_improper_output_handling.py
attacks/prompt-injection/: payloads.yaml  test_prompt_injection.py
attacks/sensitive-info-disclosure/: payloads.yaml  test_sensitive_info_disclosure.py
attacks/system-prompt-leakage/: payloads.yaml  test_system_prompt_leakage.py
checklists/: LLM_Security_Checklist.md
lib/: __init__.py  judge.py  llm_client.py  payload_loader.py
