[project]
name = "llm-security-lab"
version = "1.0.0"
description = "LLM security testing framework mapped to OWASP Top 10 for LLM Applications 2025"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Robert Johnson", email = "raj972@gmail.com"},
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "SIM108", # ternary operator suggestion — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # gradual adoption — tighten later
check_untyped_defs = true
ignore_missing_imports = true          # third-party stubs not always available

[tool.pytest.ini_options]
testpaths = ["attacks"]
markers = [
    "critical: Critical severity test case",
    "high: High severity test case",
    "medium: Medium severity test case",
    "low: Low severity test case",
]
